--- a/package.json
+++ b/package.json
@@ -11,7 +11,14 @@
     "pg": "4.x",
     "mustache": "2.2.1",
     "express": "^4.13.3",
+    "express-session": "~1.13.0",
+    "connect-flash": "~0.1.1",
     "consolidate": "*",
-    "node-trello": "1.1.2"
+
+    "node-trello": "1.1.2",
+
+    "passport": "~0.3.2",
+    "passport-local": "~1.0.0",
+    "passport-facebook": "~2.1.1"
   }
 }
