--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "body-parser": "^1.12.4",
     "cookie-parser": "^1.3.5",
     "express-session": "~1.13.0",
+    "connect-pg-simple": "~3.1.0",
     "connect-flash": "~0.1.1",
     "express-validator": "^2.10.0",
     "underscore": "^1.8.3",
