--- a/package.json
+++ b/package.json
@@ -12,27 +12,51 @@
     "start": "node src/server.js"
   },
   "dependencies": {
-    "express": "^4.13.3",
+    "backbone": "^1.3.3",
     "body-parser": "^1.12.4",
-    "cookie-parser": "^1.3.5",
-    "express-session": "~1.13.0",
-    "connect-pg-simple": "~3.1.0",
-    "connect-flash": "~0.1.1",
-    "express-validator": "^2.10.0",
-    "underscore": "^1.8.3",
-
-    "pg": "4.x",
-    "knex": "^0.8.6",
     "bookshelf": "^0.8.1",
-
+    "connect-flash": "~0.1.1",
+    "connect-pg-simple": "~3.1.0",
     "consolidate": "*",
-    "swig": "^1.4.2",
-
+    "cookie-parser": "^1.3.5",
+    "crypto": "^0.0.3",
+    "express": "^4.13.3",
+    "express-session": "~1.13.0",
+    "express-validator": "^2.10.0",
+    "knex": "^0.8.6",
     "node-trello": "1.1.2",
-
     "passport": "~0.3.2",
-    "passport-local": "~1.0.0",
     "passport-facebook": "~2.1.1",
-    "crypto": "^0.0.3"
+    "passport-local": "~1.0.0",
+    "pg": "4.x",
+    "react": "^15.1.0",
+    "react.backbone": "^0.9.0",
+    "swig": "^1.4.2",
+    "underscore": "^1.8.3"
+  },
+  "devDependencies": {
+    "browserify": "^13.0.1",
+    "browserify-shim": "^3.8.12",
+    "chai": "^3.5.0",
+    "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^3.1.0",
+    "gulp-browserify": "^0.5.1",
+    "gulp-jshint": "^2.0.1",
+    "gulp-less": "^3.1.0",
+    "gulp-minify-css": "^1.2.4",
+    "gulp-mocha-phantomjs": "^0.11.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-uglify": "^1.5.3",
+    "jshint": "^2.9.2",
+    "mocha": "^2.5.3"
+  },
+  "browserify": {
+    "transform": [ "browserify-shim" ]
+  },
+  "browser" : {
+    "jquery": "./src/client/vendor/jquery-2.2.4.min.js"
+  },
+  "browserify-shim": {
+    "jquery": "$"
   }
 }
