- some JSLint fixes - browserify jQuery (fetched externally, not from local vendor directory) - vim in Dockerfile - fixes to gulpfile

--- a/.jshintrc
+++ b/.jshintrc
@@ -23,6 +23,8 @@
     "context"    : false,
     "describe"   : false,
     "it"         : false,
-    "window"     : false
+    "window"     : false,
+    "$"          : false,
+    "jQuery"     : false
   }
 }
