--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "consolidate": "*",
     "cookie-parser": "^1.3.5",
     "crypto": "^0.0.3",
+    "del": "^2.2.0",
     "express": "^4.13.3",
     "express-session": "~1.13.0",
     "express-validator": "^2.10.0",
@@ -53,10 +54,7 @@
   "browserify": {
     "transform": [ "browserify-shim" ]
   },
-  "browser" : {
-    "jquery": "./src/client/vendor/jquery-2.2.4.min.js"
-  },
   "browserify-shim": {
-    "jquery": "$"
+    "jQuery": "global:jQuery"
   }
 }
