--- a/.jshintrc
+++ b/.jshintrc
@@ -1,20 +1,7 @@
 {
-  "camelcase": false,
-  "curly": true,
-  "eqeqeq": true,
-  "expr" : true,
-  "forin": true,
-  "immed": true,
-  "indent": 2,
-  "latedef": "nofunc",
-  "newcap": false,
-  "noarg": true,
-  "node": true,
-  "nonbsp": true,
-  "quotmark": "single",
-  "undef": true,
-  "unused": "vars",
-  "trailing": true,
+  "browser" : true,
+  "esnext" : true,
+
   "globals": {
     "after"      : false,
     "afterEach"  : false,
