--- a/package.json
+++ b/package.json
@@ -35,9 +35,8 @@
     "react": "^15.1.0",
     "react.backbone": "^0.9.0",
     "swig": "^1.4.2",
-    "underscore": "^1.8.3"
-  },
-  "devDependencies": {
+    "underscore": "^1.8.3",
+
     "babel-preset-es2015": "^6.9.0",
     "babelify": "^7.3.0",
     "browserify": "^13.0.1",
@@ -48,15 +47,17 @@
     "gulp-jshint": "^2.0.1",
     "gulp-less": "^3.1.0",
     "gulp-minify-css": "^1.2.4",
-    "gulp-mocha-phantomjs": "^0.11.0",
     "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.3",
     "gulp-util": "^3.0.7",
-    "jshint": "^2.9.2",
-    "mocha": "^2.5.3",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
+  },
+  "devDependencies": {
+    "gulp-mocha-phantomjs": "^0.11.0",
+    "jshint": "^2.9.2",
+    "mocha": "^2.5.3",
   },
   "browser": {
     "jquery": "./node_modules/jquery/dist/jquery.js",
