--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
   "devDependencies": {
     "gulp-mocha-phantomjs": "^0.11.0",
     "jshint": "^2.9.2",
-    "mocha": "^2.5.3",
+    "mocha": "^2.5.3"
   },
   "browser": {
     "jquery": "./node_modules/jquery/dist/jquery.js",
