--- a/package.json
+++ b/package.json
@@ -47,17 +47,17 @@
     "gulp-jshint": "^2.0.1",
     "gulp-less": "^3.1.0",
     "gulp-minify-css": "^1.2.4",
+    "gulp-mocha-phantomjs": "^0.11.0",
     "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.3",
     "gulp-util": "^3.0.7",
     "jshint": "^2.9.2",
+    "mocha": "^2.5.3",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
   },
   "devDependencies": {
-    "gulp-mocha-phantomjs": "^0.11.0",
-    "mocha": "^2.5.3"
   },
   "browser": {
     "jquery": "./node_modules/jquery/dist/jquery.js",
