Added Google Analytics tracking. Controlled with ANALYTICS_TRACKING_ID env variable.

--- a/sample.env
+++ b/sample.env
@@ -1,4 +1,5 @@
 DATABASE_URL=<PRODUCTION_DATABASE_URL>
+ANALYTICS_TRACKING_ID=UA-00000000-1
 DEBUG=false
 TRELLO_API_KEY=<TRELLO_API_KEY>
 TRELLO_CARD_COUNT=80
